cargo-features = ["codegen-backend"]

[package]
name = "bevy_editor_prototypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-panic-handler = "2.2.0"
bevy-world-sync = { path = "../bevy-world-sync" }
bevy_simple_text_input = "0.5.1"
cew = "0.4.0"

[profile.dev]
codegen-backend = "cranelift"

[profile.dev.package."*"]
codegen-backend = "llvm"
opt-level = 2
